[tool.poetry]
name = "repl-nix-memecoinanalytics"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.38.0"
plotly = "^5.24.1"
requests = "^2.32.3"
pandas = "^2.2.3"
ta = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
